k8s/apps/nodejs-app/base/service.yaml
# -----------------------------------------------------------------------------
# SERVICE
# Provides a stable endpoint for Pods, decoupling clients from ephemeral IPs.
# -----------------------------------------------------------------------------
apiVersion: v1
kind: Service
metadata:
  name: node-app-service
  labels:
    app: node-app
spec:
  selector:
    app: node-app
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: https
      port: 443
      targetPort: https
  type: ClusterIP
